# symphony-multi-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  NOTICE  README.md  WORKFLOW.example.md  WORKFLOW.file.example.md  WORKFLOW.md  WORKFLOW.smoke.md  pyproject.toml  tui-open.bat  tui-open.sh
.claude/skills/: symphony-oneshot  using-symphony
.github/: pull_request_template.md
.github/workflows/: tests.yml
docs/: PIPELINE-DEMO.md  PIPELINE.md  PRD-telemetry-and-sessions.md  tui-screenshot.txt
docs/improvements/: workflow-v0.5.2.md
docs/llm-wiki/: INDEX.md  agent-observability.md  board-viewer-theming.md  production-pipeline.md  session-persistence.md  tui-rendering.md
kanban/: DEMO-001.md
llm-wiki/: INDEX.md  agent-observability.md  production-pipeline.md  session-persistence.md  tui-rendering.md
scripts/: capture_tui_screenshot.py  symphony-setup-worktree.sh
skills/symphony-oneshot/: SKILL.md
skills/using-symphony/: SKILL.md
src/symphony/: __init__.py  __main__.py  _keyboard.py  _shell.py  agent.py  archive.py  auto_merge.py  board_cli.py  cli.py  doctor.py  (+18 more)
tests/: test_after_run_classifier.py  test_archive.py  test_auto_merge.py  test_backends.py  test_board_cli.py  test_board_viewer.py  test_claude_cache_tokens.py  test_doctor.py  test_i18n.py  test_issue.py  test_keep_awake.py  test_logging.py  test_orchestrator_archive.py  test_orchestrator_dispatch.py  test_orchestrator_phase_transition.py  test_progress_md.py  test_prompt.py  test_service.py  test_shell.py  test_tracker_file.py  test_tracker_linear_archive.py  test_tui.py  test_wiki_sweep.py  test_workflow.py  test_workflow_file_tracker.py  test_workflow_pipeline_prompt.py  test_workspace.py
(+97 files in other folders)
