[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "0.1.0"
description = "Symphony Service: orchestrates coding agents to get project work done (per OpenAI Symphony SPEC v1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "symphony reference impl" }]
dependencies = [
    "PyYAML>=6.0",
    "httpx>=0.27",
    "watchdog>=4.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
symphony = "symphony.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
